# ChangeLog for dev-libs/cloog-ppl
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/cloog-ppl/ChangeLog,v 1.15 2010/04/30 06:13:37 aballier Exp $

  30 Apr 2010; Alexis Ballier <aballier@gentoo.org> cloog-ppl-0.15.8.ebuild:
  keyword ~sparc-fbsd

*cloog-ppl-0.15.8 (12 Feb 2010)

  12 Feb 2010; Ryan Hill <dirtyepic@gentoo.org> -cloog-ppl-0.15.4.ebuild,
  +cloog-ppl-0.15.8.ebuild:
  Version bump. Fixes wrong-code bug w/ -floop-strip-mine.

  19 Sep 2009; Alexis Ballier <aballier@gentoo.org> cloog-ppl-0.15.7.ebuild:
  keyword ~x86-fbsd

*cloog-ppl-0.15.7 (25 Aug 2009)

  25 Aug 2009; Ryan Hill <dirtyepic@gentoo.org> -cloog-ppl-0.15.3.ebuild,
  +cloog-ppl-0.15.7.ebuild, metadata.xml:
  Version bump, minor build fixes. Move back to EAPI 0 and remove redundant
  maintainer metadata.

  01 Aug 2009; Ryan Hill <dirtyepic@gentoo.org> metadata.xml:
  Add toolchain to metadata.xml

*cloog-ppl-0.15.4 (31 Jul 2009)

  31 Jul 2009; Ryan Hill <dirtyepic@gentoo.org> +cloog-ppl-0.15.4.ebuild:
  Version bump.

  22 Jul 2009; Joseph Jezak <josejx@gentoo.org> cloog-ppl-0.15.3.ebuild:
  Marked ~ppc for bug #269088.

  27 Jun 2009; Tobias Klausmann <klausman@gentoo.org>
  cloog-ppl-0.15.3.ebuild:
  Keyworded on alpha, bug #269088

  07 Jun 2009; Raúl Porcel <armin76@gentoo.org> cloog-ppl-0.15.3.ebuild:
  Add ~arm/~ia64/~s390/~sh/~sparc wrt #269088

  30 May 2009; Brent Baude <ranger@gentoo.org> cloog-ppl-0.15.3.ebuild:
  Marking cloog-ppl-0.15.3 ~ppc64 for bug 269088

  12 May 2009; Jeroen Roovers <jer@gentoo.org> cloog-ppl-0.15.3.ebuild:
  Marked ~hppa (bug #269088).

  07 May 2009; Mark Loeser <halcy0n@gentoo.org> cloog-ppl-0.15.3.ebuild:
  Keyworded ~x86

*cloog-ppl-0.15.3 (14 Apr 2009)

  14 Apr 2009; Ryan Hill <dirtyepic@gentoo.org> +metadata.xml,
  +cloog-ppl-0.15.3.ebuild:
  Move into gentoo-x86.

  31 Jan 2009; Ryan Hill <dirtyepic@gentoo.org> +metadata.xml,
  +cloog-ppl-0.15.ebuild: